--- a/website/public/index.css
+++ b/website/public/index.css
@@ -10,3 +10,49 @@ body{
 h2, h3, h4{
   text-align: center;
 }
+
+.dropbtn {
+  background-color: #545454;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  margin:0 auto;
+  width: 100%;
+}
+
+.dropdown {
+  position: relative;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+.dropdown-content a:hover {
+  text-decoration: none;
+  color:black;
+}
+
+.dropdown-content a:hover {background-color: #ddd}
+
+.dropdown:hover .dropdown-content {
+  display: block !important;
+}
+
+.dropdown:hover .dropbtn {
+  background-color: #333;
+}
