--- a/website/public/index.css
+++ b/website/public/index.css
@@ -62,6 +62,13 @@ h2, h3, h4{
   overflow:scroll;
   border:1px solid #C8C8C8;
 }
+
+.green{
+  background-color: #00bb00;
+}
+.red{
+  background-color: #ff0000;
+}
 @media screen and (max-width: 576px){
   #scrollBox{
     height:240px;
